--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,13 +3,13 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "moduleDetection": "force",
     "allowImportingTsExtensions": true,
-    "types": ["node"],
+    "types": ["node", "vitest"],
     "lib": ["ES2022"],
     "noEmit": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "vitest.config.ts", "test/**/*.ts", "src/**/*.ts"]
 }
