--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vitest": "^0.5.4",
     "globals": "^16.5.0",
     "lovable-tagger": "^1.1.11",
+    "picomatch": "^4.0.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.47.0",
     "vite": "^7.2.2",
